Updated image URL

--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
         <div class="header">
             <div class="profile">
                 <!-- Replace with your actual photo URL -->
-                <img src="des.jpeg" alt="Jayasharma" class="profile-pic">
+                <img src="pic.jpg" alt="Sudhanshu" class="profile-pic">
                 <div class="profile-info">
-                    <h1>Jaya Sharma</h1>
-                    <p>Drama Queen</p>
+                    <h1>Sudhanshu Gupta</h1>
+                    <p>chess player</p>
                 </div>
             </div>
-            <a href="https://instagram.com/jayasharma" class="github-badge" target="_blank">
-                instagram.com/jayasharma <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/sudhanshu_4877/" class="github-badge" target="_blank">
+                sudhanshu_4877 <i class="fab fa-instagram"></i>
             </a>
         </div>
         
